--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-mongo-sanitize": "^2.0.2",
     "express-session": "^1.17.1",
     "helmet": "^4.6.0",
+    "html-pdf": "^3.0.1",
     "joi": "^17.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.7",
